Fix register modal visibility

--- a/src/components/Authentication/AuthModal.module.css
+++ b/src/components/Authentication/AuthModal.module.css
@@ -10,11 +10,15 @@
 
 .modal {
     position: fixed;
-    top: 20vh;
+    top: 10vh;
     left: 10%;
     width: 80%;
     z-index: 100;
     overflow: hidden;
+}
+
+.modalRegister {
+    top: 5vh;
 }
 
 .header {
